# OpenAtoms

./: .gitignore  .zenodo.json  AUDIT.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DEV_NOTES.md  LICENSE  README.md  RELEASE_CHECKLIST.md  SAFETY.md  SCIENCE.md  SECURITY.md  SETUP.md  SUPPORT.md  UPGRADE.md  buildout.md  pyproject.toml  requirements.txt
.github/workflows/: codeql.yml  pytest.yml  release.yml  security.yml  test.yml
docs/: BENCHMARK_REPORT_EXAMPLE.md  BUNDLE_SPEC.md  INTERFACE.md  REPRODUCIBILITY.md  ZENODO.md  benchmark_example.md
eval/: __init__.py  baselines.py  evaluate.py  generate_protocols.py  run_benchmark.py
eval/results/: BENCHMARK_REPORT.md  benchmark_v1.json  raw_runs.jsonl  summary.json
examples/: basic_compilation.py  hello_atoms.py  node_a_bio_kinetic.py  node_b_thermo_kinetic.py  node_c_contact_kinetic.py  openai_tool_calling.py  research_loop.py
examples/bci_verification_bottleneck/: .gitignore  README.md  run_example.py
examples/bci_verification_bottleneck/bridge/: __init__.py  bayesian_fusion.py  entropy_estimator.py  itr_calculator.py  p300_simulator.py  scaling_law.py
examples/bci_verification_bottleneck/openatoms_integration/: __init__.py  bci_ir.py  bci_simulator.py
examples/bci_verification_bottleneck/validation/: __init__.py  derco_loader.py  reference_data.py
openatoms/: __init__.py  actions.py  adapters.py  api.py  bundle.py  cli.py  core.py  dag.py  driver_conformance.py  errors.py  exceptions.py  ids.py  ir.py  policy.py  profiles.py  provenance.py  replay.py  runner.py  tools.py  units.py  validators.py
openatoms/adapters/: README.md  __init__.py  arduino_cloud.py  bambu.py  base.py  home_assistant.py  opentrons.py  viam.py
openatoms/eval/: __init__.py  benchmark.py  mock_llm.py
openatoms/ir/: __init__.py  provenance.py  schema_v1_1_0.json
openatoms/schemas/: __init__.py  ir-1.1.0.schema.json  ir.schema.json
openatoms/sim/: __init__.py  harness.py  noise.py  types.py
openatoms/sim/bio/: __init__.py  molarity.py
openatoms/sim/registry/: __init__.py  kinetics_sim.py  opentrons_sim.py  robotics_sim.py
openatoms/sim/validation/: h2o2_ignition_data.py
scripts/: generate_interface_report.py  verify_reproducibility.py
tests/: _bundle_test_utils.py  e2e_real_world_demo.py  hero_e2e_exothermic.py  test_acceptance_demos.py  test_adapters.py  test_adapters_sim.py  test_bci_example.py  test_bundle_cli_smoke.py  test_bundle_redaction.py  test_bundle_replay_equivalence.py  test_bundle_roundtrip_determinism.py  test_bundle_signature.py  test_bundle_verify_tamper_evidence.py  test_core_and_dag.py  test_dag_dependencies.py  test_determinism.py  test_driver_conformance.py  test_end_to_end_agent_flow.py  test_eval_benchmark_pipeline.py  test_examples_docs.py  test_examples_execution.py  test_fuzz_protocols.py  test_interface_report_up_to_date.py  test_invariants.py  test_ir_and_provenance.py  test_ir_contract.py  test_ir_single_source_runtime.py  test_linter.py  test_noise_and_benchmark.py  test_packaging_install.py  test_public_api_surface.py  test_real_ode_integration.py  test_registry_internals.py  test_repro_docs_up_to_date.py  test_runner_hardening.py  test_sim_harness.py  test_sim_nodes.py  test_sim_registry.py  test_simulator_contracts.py  test_thermo_affinity_boundary.py  (+2 more)
