[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openatoms"
version = "0.2.0"
authors = [
  { name = "OpenAtoms Contributors" },
]
description = "OpenAtoms is a deterministic compiler that translates AI intent into validated physical execution."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
keywords = ["physical-ai", "compiler", "robotics", "automation", "deterministic-systems"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
  "pint>=0.25,<1",
  "pydantic>=2,<3",
  "jsonschema>=4,<5",
]

[project.optional-dependencies]
science = [
  "cantera>=3,<4",
  "opentrons>=7,<8",
]
dev = [
  "build>=1.2.0",
  "hypothesis>=6,<7",
  "mypy>=1.8.0",
  "pytest>=9,<10",
  "pytest-cov>=7,<8",
  "ruff>=0.4.0",
]

[project.urls]
"Homepage" = "https://github.com/abdulrahimiqbal/OpenAtoms"
"Repository" = "https://github.com/abdulrahimiqbal/OpenAtoms"
"Issues" = "https://github.com/abdulrahimiqbal/OpenAtoms/issues"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.setuptools.package-data]
openatoms = ["schemas/*.json", "ir/*.json"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[tool.coverage.run]
omit = [
  "openatoms/adapters/*",
  "openatoms/driver_conformance.py",
  "openatoms/policy.py",
  "openatoms/profiles.py",
  "openatoms/provenance.py",
  "openatoms/replay.py",
  "openatoms/runner.py",
  "openatoms/sim/harness.py",
  "openatoms/tools.py",
]
